--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -1,6 +1,6 @@
 .awesome-editor {
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,"\5FAE\8F6F\96C5\9ED1",Arial,sans-serif;
-  .node-list {
+  .content-warp {
     .node-item {
       position: relative;
       .input-warp {
