--- a/src/assets/styles/index.less
+++ b/src/assets/styles/index.less
@@ -35,6 +35,13 @@
             color: #FAAD14;
           }
         }
+        & > a {
+          cursor: pointer;
+          color: #2c65ff;
+          &:hover {
+            opacity: .8;
+          }
+        }
       }
       .bullet-wrapper {
         width: 18px;
