--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -1,7 +1,6 @@
-* {
-  box-sizing: border-box;
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-}
+@import "./variable.less";
+@import "./base.less";
+
 .awesome-editor {
   font-family: Helvetica Neue,Helvetica,PingFang SC,Hiragino Sans GB,Microsoft YaHei,"\5FAE\8F6F\96C5\9ED1",Arial,sans-serif;
   .node-item {
@@ -43,7 +42,7 @@
           cursor: pointer;
           color: #2c65ff;
           &:hover {
-            opacity: .8;
+            opacity: .6;
           }
         }
       }
