--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -8,7 +8,7 @@
   overflow: hidden;
   background-color: #fff;
   z-index: 20;
-  animation: fadeUp .3s ease;
+  animation: fadeUp .2s ease-in-out;
   transform-origin: top left;
   padding: 8px 0;
   .insert-node {
@@ -19,6 +19,69 @@
     cursor: pointer;
     &:hover {
       background-color: rgb(233, 233, 235);
+    }
+  }
+}
+
+.text-toolbar-wrap {
+  position: fixed;
+  height: 30px;
+  border-radius: 4px;
+  color: rgb(31, 35, 41);
+  box-shadow: rgb(0 0 0 / 16%) 0px 2px 10px 0px;
+  user-select: none;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  padding: 4px;
+  transform: translateX(-50%);
+  & > .handle-item {
+    font-size: 12px;
+    height: 22px;
+    line-height: 22px;
+    padding: 0 4px;
+    cursor: pointer;
+    &:hover,
+    &.active {
+      background-color: rgb(233, 233, 235);
+    }
+  }
+}
+
+.hyperlink-toolbar-wrap {
+  box-shadow: rgb(0 0 0 / 16%) 0px 2px 10px 0px;
+  position: fixed;
+  padding: 0 16px;
+  background-color: #fff;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  transition: all .3s ease;
+  &.error {
+    box-shadow: #ff4d4f 0px 2px 10px 0px;
+    border-color: #ff4d4f;
+  }
+  & > label {
+    display: flex;
+    justify-content: space-between;
+    height: 36px;
+    line-height: 36px;
+    min-width: 200px;
+    font-size: 14px;
+    color: @gray4;
+    &:not(:last-child) {
+      height: 37px;
+      border-bottom: 1px solid rgb(222, 222, 225);
+    }
+    input {
+      font-size: 13px;
+      margin-left: 6px;
+      flex: 1;
+      color: @gray1;
+      border: none;
+      outline: none;
+      &::-webkit-input-placeholder {
+        color: @gray6;
+      }
     }
   }
 }
