--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -48,31 +48,28 @@
       }
     }
     .bullet-wrapper {
-      width: 18px;
-      height: 18px;
-      border-radius: 9px;
+      width: 16px;
+      height: 16px;
+      border-radius: 8px;
       position: absolute;
       cursor: pointer;
       display: flex;
       align-items: center;
       justify-content: center;
       left: 3px;
-      top: 6px;
-      transition: all .3s ease;
-      &::after {
-        content: '';
-        display: block;
-        width: 6px;
-        height: 6px;
-        border-radius: 3px;
-        background-color: #66666d;
-      }
+      top: 7px;
+      transition: opacity .3s ease;
+      opacity: .5;
       &:hover {
-        background-color: rgb(233, 233, 235);
-        transform: scale(1.1);
+        opacity: 1;
+      }
+      & > svg {
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
       }
     }
-    &.heading1 {
+    &.head1 {
       .input-wrap {
         font-size: 26px;
         line-height: 39px;
@@ -81,7 +78,7 @@
         top: 12px;
       }
     }
-    &.heading2 {
+    &.head2 {
       .input-wrap {
         font-size: 22px;
         line-height: 32px;
@@ -90,7 +87,7 @@
         top: 9px;
       }
     }
-    &.heading3 {
+    &.head3 {
       .input-wrap {
         font-size: 20px;
         line-height: 30px;
@@ -155,13 +152,32 @@
           overflow: hidden;
           display: inline-block;
           border: 2px solid transparent;
-          cursor: pointer;
+          position: relative;
           img {
             float: left;
             max-width: 100%;
           }
+          .delete {
+            display: none;
+            position: absolute;
+            width: 30px;
+            height: 22px;
+            background-color: @gray2;
+            right: 0;
+            top: 0;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            & > svg {
+              width: 14px;
+              height: 14px;
+            }
+          }
           &.active, &:hover {
             border-color: #3370ff;
+            .delete {
+              display: flex;
+            }
           }
         }
         
