--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -1,9 +1,9 @@
 .node-toolbar-wrap {
-  width: 120px;
+  width: 150px;
   position: fixed;
-  box-shadow: rgb(0 0 0 / 16%) 0px 2px 10px 0px;
+  box-shadow: 0 4px 16px -2px rgba(0, 0, 0, 0.12);
   user-select: none;
-  border-radius: 4px;
+  border-radius: 2px;
   box-sizing: border-box;
   overflow: hidden;
   background-color: #fff;
@@ -11,49 +11,79 @@
   animation: fadeUp .2s ease-in-out;
   transform-origin: top left;
   padding: 8px 0;
+  .toolbar-title {
+    font-size: 13px;
+    font-weight: 500;
+    color: #8c8e8f;
+    line-height: 28px;
+    padding-left: 12px;
+  }
   .insert-node {
-    text-align: center;
-    font-size: 14px;
-    line-height: 24px;
-    color: #555659;
+    display: flex;
+    align-items:center;
+    height: 40px;
+    color: #17181a;
     cursor: pointer;
+    line-height: 40px;
+    padding: 0 12px;
+    & > svg {
+      width: 28px;
+      height: 28px;
+      margin-right: 12px;
+    }
     &:hover {
       background-color: rgb(233, 233, 235);
     }
+  }
+  .split-line {
+    height: 0px;
+    border-top: 1px solid #f7f8fb;
+    margin: 8px 0;
   }
 }
 
 .text-toolbar-wrap {
   position: fixed;
-  height: 30px;
-  border-radius: 4px;
-  color: rgb(31, 35, 41);
-  box-shadow: rgb(0 0 0 / 16%) 0px 2px 10px 0px;
+  height: 60px;
+  border-radius: 2px;
+  box-shadow: 0 4px 16px -2px rgba(0, 0, 0, 0.12);
+  padding: 12px 14px;
   user-select: none;
   background-color: #fff;
   display: flex;
   align-items: center;
-  padding: 4px;
   transform: translateX(-50%);
   & > .handle-item {
     font-size: 12px;
-    height: 22px;
+    height: 36px;
+    width: 36px;
+    border-radius: 5px;
+    overflow: hidden;
     line-height: 22px;
-    padding: 0 4px;
     cursor: pointer;
+    &:not(:last-child) {
+      margin-right: 12px;
+    }
     &:hover,
     &.active {
-      background-color: rgb(233, 233, 235);
+      background-color: #f7f8fb;
+    }
+    & > svg {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      cursor: pointer;
+      pointer-events: none;
     }
   }
 }
 
 .hyperlink-toolbar-wrap {
-  box-shadow: rgb(0 0 0 / 16%) 0px 2px 10px 0px;
+  border-radius: 2px;
+  box-shadow: 0 4px 16px -2px rgba(0, 0, 0, 0.12);
   position: fixed;
   padding: 0 16px;
   background-color: #fff;
-  border-radius: 4px;
   border: 1px solid transparent;
   transition: all .3s ease;
   &.error {
@@ -63,24 +93,24 @@
   & > label {
     display: flex;
     justify-content: space-between;
-    height: 36px;
-    line-height: 36px;
-    min-width: 200px;
+    height: 52px;
+    line-height: 52px;
+    width: 324px;
     font-size: 14px;
-    color: @gray4;
+    color: #555659;
     &:not(:last-child) {
-      height: 37px;
-      border-bottom: 1px solid rgb(222, 222, 225);
+      height: 53px;
+      border-bottom: 1px solid #f7f8fb;
     }
     input {
       font-size: 13px;
-      margin-left: 6px;
+      margin-left: 16px;
       flex: 1;
       color: @gray1;
       border: none;
       outline: none;
       &::-webkit-input-placeholder {
-        color: @gray6;
+        color: #b0b2b4;
       }
     }
   }
