--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -86,6 +86,7 @@
   background-color: #fff;
   border: 1px solid transparent;
   transition: all .3s ease;
+  transform: translateX(-50%);
   &.error {
     box-shadow: #ff4d4f 0px 2px 10px 0px;
     border-color: #ff4d4f;
@@ -113,6 +114,40 @@
         color: #b0b2b4;
       }
     }
+  }
+}
+
+.table-toolbar-wrap {
+  position: fixed;
+  border-radius: 2px;
+  background-color: rgba(0, 0, 0, 0.75);
+  box-shadow: 0 2px 8px 0 rgb(0 0 0 / 15%);
+  color: #fff;
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  transform: translateX(-50%);
+  padding: 6px 10px;
+  & > span {
+    margin: 0 10px;
+    cursor: pointer;
+    &:hover {
+      text-decoration: underline;
+      opacity: .8;
+    }
+  }
+  &:after {
+    content: '';
+    display: block;
+    width: 0;
+    right: 0;
+    border-width: 8px;
+    border-color: transparent transparent rgba(0, 0, 0, 0.75) transparent;
+    border-style: solid;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: -16px;
   }
 }
 
